package com.udacity.project4

import android.app.Application
import android.util.Log
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import kotlinx.coroutines.runBlocking
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get
import androidx.test.espresso.matcher.RootMatchers.withDecorView

import org.hamcrest.CoreMatchers.not
import org.junit.Rule

import androidx.test.rule.ActivityTestRule
import com.google.android.gms.maps.GoogleMap
import com.google.android.gms.maps.model.MarkerOptions
import com.google.android.gms.maps.model.PointOfInterest
import com.udacity.project4.util.ToastMatcher
import com.udacity.project4.util.ToastMatcher.Companion.onToast
import com.udacity.project4.utils.EspressoIdlingResource
import kotlinx.coroutines.test.runBlockingTest
import org.hamcrest.core.Is.`is`


@RunWith(AndroidJUnit4::class)
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest :
    AutoCloseKoinTest() {// Extended Koin Test - embed autoclose @after method to close Koin after every test

    private lateinit var repository: ReminderDataSource
    private val dataBindingIdlingResource = DataBindingIdlingResource()
    private lateinit var appContext: Application

    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */


    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }

    @Before
    fun registerIdlingResource() {
        IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().register(dataBindingIdlingResource)
    }

    /**
     * Unregister your idling resource so it can be garbage collected and does not leak any memory.
     */
    @After
    fun unregisterIdlingResource() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
    }



@Test
fun addReminder_withoutPOI() = runBlocking {
    val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
    dataBindingIdlingResource.monitorActivity(activityScenario)

    // Given an empty list of reminders
    onView(withId(R.id.addReminderFAB)).perform(click())

    // When invalid reminder is try to be added
    onView(withId(R.id.reminderTitle)).perform(replaceText("Reminder title"))
    onView(withId(R.id.reminderDescription)).perform(replaceText("Reminder description"))
    onView(withId(R.id.selectLocation)).perform(click())

    onView(withId(R.id.button_save_location)).perform(click())
    onView(withId(R.id.saveReminder)).perform(click())

    // onView(withText(R.string.TOAST_STRING)).inRoot(withDecorView(not(is(getActivity().getWindow().getDecorView())))).check(matches(isDisplayed()));

    // Then no reminder is added
    Espresso.pressBack()
    onView(withId(R.id.noDataTextView)).check(matches(isDisplayed()))

    activityScenario.close()
}

    @Test
    fun addReminder_withoutTitle_shouldDisplaySnackbarWithError() = runBlocking {
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)
        // Given an empty list of reminders
        onView(withId(R.id.addReminderFAB)).perform(click())

        // When reminder with missing Title is tried to be added
        onView(withId(R.id.reminderDescription)).perform(replaceText("Reminder description"))
        onView(withId(R.id.selectLocation)).perform(click())

        onView(withId(R.id.button_save_location)).perform(click())
        onView(withId(R.id.saveReminder)).perform(click())

        // Snack bar showing missing title is displayed
        onView(withId(com.google.android.material.R.id.snackbar_text))
            .check(matches(withText(R.string.err_enter_title)))

        activityScenario.close()
    }

    @Test
    fun addReminder_withValidReminder_shouldDisplaySuccessToast() = runBlocking {
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        // Given an empty list of reminders
        onView(withId(R.id.addReminderFAB)).perform(click())

        // When invalid reminder is try to be added
        onView(withId(R.id.reminderTitle)).perform(replaceText("Reminder title"))
        onView(withId(R.id.reminderDescription)).perform(replaceText("Reminder description"))
        onView(withId(R.id.selectLocation)).perform(click())

        onView(withId(R.id.map)).perform(longClick())

        onView(withId(R.id.button_save_location)).perform(click())
         onView(withId(R.id.saveReminder)).perform(click())

        onToast(R.string.reminder_saved).check(matches(isDisplayed()))
//        onView(withText(R.string.reminder_saved)).inRoot(ToastMatcher())
//            .check(matches(isDisplayed()))

//        activityScenario.onActivity {
//            onView(withText(R.string.reminder_saved)).inRoot(
//                withDecorView(
//                    not(
//                        `is`(
//                            it!!.window.decorView
//                        )
//                    )
//                )
//            ).check(
//                matches(
//                    isDisplayed()
//                )
//            )
//        }

        activityScenario.close()
    }

}
